# cuda_sprec

./: .pre-commit-config.yaml  Makefile  README.md  environment.yaml  main.py  pyproject.toml  setup.py  utils.py
cusprec/: __init__.py  constants.py  utils.py
cusprec/algorithms/: __init__.py  base.py  omp.py
cusprec/data/: __init__.py  dataset.py
cusprec/kernels/: basic.cu
cusprec/kernels/algorithms/: ops.cu
cusprec/kernels/data/: basic.cu
cusprec/notebooks/: 01_test_ops.ipynb
cusprec/utils/: utils.py
tests/: test_ops.py
